kubernetes/my-cluster/mybackend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: mybackend-deployment
  labels:
    app: myapp-backend
    type: backend

spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        app: myapp-backend
        type: backend

    spec:
      containers:
        - name: my-backend-container
          image: ksikorski1/mybackend

  replicas: 4
  selector:
    matchLabels:
      type: backend
