kubernetes/my-cluster/mybackend-service.yml
kind: Service
apiVersion: v1

metadata:
  name: myapp-service

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30009

  selector:
    app: myapp-backend
    type: backend
