kubernetes/my-cluster/myfrontend-service.yml
apiVersion: v1
kind: Service

metadata:
    name: myfrontend-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 80
          port: 80

    selector:
        type: frontend
