kubernetes/my-cluster/mypostgres-service.yml
kind: Service
apiVersion: v1

metadata:
  name: mypostgres-service

spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432

  selector:
    type: database
