kubernetes/my-cluster/redis-service-clusterip.yml
kind: Service
apiVersion: v1

metadata:
  name: myredisservice

spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379

  selector:
    type: cache
